--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,6 @@
 	<title>My webpage</title>
 </head>
 <body>
-	Hello,World! Hello again, Hello Hello Hello
+	Hello,World! Hello again, Hello Hello
 </body>
 </html>
